tests/ecc-aws-005-rds_not_open_to_large_scope/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "GroupId": "sg-0dd1423c6065538f1",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [
                            {
                                "CidrIpv6": "::/0"
                            }
                        ],
                        "PrefixListIds": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "ecc-aws-005-rds_not_open_to_large_scope"
                    },
                    {
                        "Key": "Name",
                        "Value": "005_security_group_red1"
                    }
                ],
                "VpcId": "vpc-0000000",
                "OwnerId": "644160558196",
                "GroupName": "005_security_group_red1",
                "Description": "Allow all inbound traffic",
                "IpPermissions": [
                    {
                        "IpProtocol": "-1",
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": []
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 100,
                        "ToPort": 100,
                        "UserIdGroupPairs": [],
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [
                            {
                                "CidrIpv6": "::/0"
                            }
                        ],
                        "PrefixListIds": []
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": 443,
                        "ToPort": 443,
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196",
                                "GroupId": "sg-0000000"
                            }
                        ],
                        "IpRanges": [
                            {
                                "CidrIp": "172.31.0.0/16"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [
                            {
                                "PrefixListId": "pl-038308fde972936d7"
                            }
                        ]
                    }
                ]
            }
        ],
        "ResponseMetadata": {}
    }
}
